--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Creators</title>
   </head>
   <body>
+    <h2>hey there</h2>
     <script type="text/javascript" src="/js/index.js"></script>
   </body>
 </html>
