--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <title>Creators</title>
   </head>
   <body>
-    <h2>hey there</h2>
-    <script type="text/javascript" src="/js/index.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
   </body>
 </html>
